--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "webrtc"]
 	path = webrtc
-	url = git://git.linphone.org/webrtc.git
+	url = https://github.com/VTCSecureLLC/linphone-webrtc
 	ignore = dirty
